# brightsparks_assessment

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
cli/: cli.py  csv_parse.py  record.py  top_n_list.py
src/cli/: record.py  valid_args.py
tests/: conftest.py  test_csv_parse.py  test_parse.py  test_record.py  test_top_n_list.py
